--- a/LANDING PAGE WYN/LANDING PAGE WYN/pedido.html
+++ b/LANDING PAGE WYN/LANDING PAGE WYN/pedido.html
@@ -185,7 +185,7 @@
 					<div class="dropdown">
 						<a
 							class="dropdown-toggle"
-							href="#"
+							href="indexx.html"
 							role="button"
 							data-toggle="dropdown"
 						>
@@ -202,9 +202,6 @@
 							>
 							<a class="dropdown-item" href="profile.html"
 								><i class="dw dw-settings2"></i>Configurações</a
-							>
-							<a class="dropdown-item" href="faq.html"
-								><i class="dw dw-help"></i> Ajuda</a
 							>
 							<a class="dropdown-item" href="login.html"
 								><i class="dw dw-logout"></i> Sair</a
@@ -387,7 +384,7 @@
 
 		<div class="left-side-bar">
 			<div class="brand-logo">
-				<a href="index.html">
+				<a href="indexx.html">
 					<img src="/Tela Inicial copy/w (1).png" alt="" class="dark-logo" />
 					<img
 						src="/Tela Inicial copy/w (1).png"
